# browsea

./: .gitignore  Cargo.toml  README.md  browsea.exe.manifest  browser_picker.exe.manifest  build.bat  build.rs  install.bat  uninstall.bat
src/: app.rs  browser.rs  browser_launcher.rs  config.rs  icons.rs  main.rs  registry.rs  theme.rs
src/ui/: browsea.rs  browser_picker.rs  mod.rs  settings.rs
