[package]
name = "browser_picker"
version = "0.1.0"
edition = "2021"

# Add this section to specify Windows subsystem
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "shellapi"] }

# Add this to specify that it's a Windows GUI app
[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

# Add this to make it a Windows GUI application (hides the console window)
[[bin]]
name = "browser_picker"
path = "src/main.rs"
windows_subsystem = "windows"

[dependencies]
eframe = { version = "0.22", features = ["persistence"] }
winreg = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.3"
directories = "4.0"
rfd = "0.11"
image = "0.24"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true